add preload to images in posts

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 		<!--=include /img/sprite/sprite.svg -->
 
 		<div id="root" class="main-wrapper">
-			<!--=include /templates/index-preloader.html -->
+			<!--=include /templates/partials/_preloaderNew.hbs -->
 		</div>
 
 		<script src="/js/vendor.js"></script>
